change to white

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
+
+/* color of text rgb(59, 61, 65) */
+/* font San Fransico Pro Text) */
+/* add staggered ani yt */
+
 * {
   box-sizing: border-box;
   margin: 0;
