--- a/src/components/Preloader.css
+++ b/src/components/Preloader.css
@@ -15,12 +15,14 @@
 }
 
 .preloader .texts-container{
+    font-family: Poppins;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
+    gap: 10px;
     height: 60px;
-    width: 280px;
-    font-size: 20px;
+   
+    font-size: 30px;
     font-weight: 800;
     overflow: hidden;
     color: white;
