--- a/src/index.css
+++ b/src/index.css
@@ -1,23 +1,21 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
-
-/* font San Fransico Pro Textsss */
-/* add staggered ani yt */  
-
-
+@import url("https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@100;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Syncopate:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bodoni+Moda:wght@100;700&display=swap");
 
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
   scroll-behavior: smooth;
-  font-family: "Poppins", sans-serif;
+  font-family: "Bai Jamjuree", sans-serif;
 }
 
 body {
   margin: 0px !important;
   padding: 0;
-  font-family: "Montserrat", sans-serif;
+
 }
 
 /* width */
