--- a/src/components/Preloader.css
+++ b/src/components/Preloader.css
@@ -1,7 +1,7 @@
 .preloader{
     height: 100vh;
     width: 100%;
-    background: black;
+    background: #111111;
     color: white;
     position: fixed;
     bottom: 0;
@@ -21,12 +21,27 @@
     justify-content: center;
     gap: 10px;
     height: 60px;
-   
     font-size: 30px;
-    font-weight: 800;
+    font-weight: 600;
     overflow: hidden;
     color: white;
 
+}
+
+#text1 {
+    font-family: "Bai Jamjuree", sans-serif;
+    font-weight: 500;
+    font-style:normal;
+}
+
+#text2 {
+    font-family: "Syncopate", sans-serif;
+}
+
+#text3 {
+    font-family: "Bodoni Moda", sans-serif;
+    font-style: italic;
+    font-weight: 100;
 }
 
 
