--- a/src/components/CustomCursor/style.css
+++ b/src/components/CustomCursor/style.css
@@ -6,52 +6,44 @@
   transform: translate3d(0, 0, 0);
   position: fixed;
   background: white;
-  // border: 1px solid black;
+  /* border: 1px solid black; */
   mix-blend-mode: difference;
   transition: width 0.25s ease-in-out, height 0.25s ease-in-out;
-
-  &.regular {
-    width: 40px;
-    height: 40px;
-  }
-  &.small {
-    width: 60px;
-    height: 60px;
-  }
 }
 
+.secondary-cursor.regular {
+  width: 100px;
+  height: 100px;
+}
+
+.secondary-cursor.small {
+  width: 100px;
+  height: 100px;
+}
 
 .secondary-cursor {
   z-index: 10000;
-
   pointer-events: none;
-  // overflow: hidden;
+  /* overflow: hidden; */
   transform: translate3d(0, 0, 0);
   position: fixed;
 }
 
-
 .secondary-cursor {
-  width: 30px;
-  height: 30px;
-
+  width: 50px;
+  height: 50px;
 }
 
 .slider-drag {
-
-
- 
 }
 
 .hamburger {
-  
-
 }
+
 @keyframes fadeIn {
   0% {
     opacity: 0;
   }
-
   100% {
     opacity: 1;
   }
@@ -61,7 +53,6 @@
   0% {
     opacity: 1;
   }
-
   100% {
     opacity: 0;
   }
@@ -71,7 +62,6 @@
   from {
     background-color: transparent;
   }
-
   to {
     background-color: black;
   }
@@ -81,7 +71,6 @@
   from {
     background-color: black;
   }
-
   to {
     background-color: transparent;
   }
@@ -91,7 +80,6 @@
   from {
     transform: scale(1);
   }
-
   to {
     transform: scale(1.5);
   }
@@ -101,7 +89,6 @@
   from {
     transform: scale(1.5);
   }
-
   to {
     transform: scale(1);
   }
@@ -111,7 +98,6 @@
   from {
     transform: translate(20px, -50%);
   }
-
   to {
     transform: translate(0px, -50%);
   }
@@ -121,7 +107,6 @@
   from {
     transform: translate(-20px, -50%);
   }
-
   to {
     transform: translate(0px, -50%);
   }
