--- a/src/components/Preloader.css
+++ b/src/components/Preloader.css
@@ -21,7 +21,7 @@
     justify-content: center;
     gap: 10px;
     height: 60px;
-    font-size: 30px;
+    font-size: 27px;
     font-weight: 600;
     overflow: hidden;
     color: white;
@@ -29,9 +29,8 @@
 }
 
 #text1 {
-    font-family: "Bai Jamjuree", sans-serif;
-    font-weight: 500;
-    font-style:normal;
+    font-family: "Poppins", sans-serif;
+    font-weight: 200;
 }
 
 #text2 {
