--- a/src/components/sections/Hero.css
+++ b/src/components/sections/Hero.css
@@ -14,8 +14,10 @@
 #text-behind, #text-front, #text-behind-blur {
   position: absolute;
   text-align: center;
-  line-height: 0.9;
-  font-family: "Bai Jamjuree", sans-serif;
+  line-height: 1;
+  font-family: 'Monument Extended', sans-serif;
+  font-size: 13rem;
+  font-weight: 800;
 }
 
 #text-behind {
@@ -37,10 +39,9 @@
   -webkit-text-stroke: 2px var(--headline-color);
   z-index: 3;
 }
-  
-  /* Define your CSS variables */
+
   :root {
-    --headline-color: #222222;
+    --headline-color: #f5f0ec;
 
   }
   
