--- a/src/index.css
+++ b/src/index.css
@@ -5,12 +5,39 @@
 @import url("https://fonts.googleapis.com/css2?family=Bodoni+Moda:wght@100;700&display=swap");
 
 
+@font-face {
+  font-family: 'Monument Extended';
+  font-style: normal;
+  font-weight: 300;
+  src: local('Monument Extended'), 
+       url('https://fonts.cdnfonts.com/s/19595/MonumentExtended-Light.woff') format('woff');
+}
+
+@font-face {
+    font-family: 'Monument Extended';
+    font-style: normal;
+    font-weight: 400;
+    src: local('Monument Extended'), 
+         url('https://fonts.cdnfonts.com/s/19595/MonumentExtended-Regular.woff') format('woff');
+}
+
+@font-face {
+    font-family: 'Monument Extended';
+    font-style: normal;
+    font-weight: 800;
+    src: local('Monument Extended'), 
+         url('https://fonts.cdnfonts.com/s/19595/MonumentExtended-Ultrabold.woff') format('woff');
+}
+
+
+
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
   scroll-behavior: smooth;
-  font-family: "Bai Jamjuree", sans-serif;
+  font-family: 'Monument Extended', sans-serif;
 }
 
 body {
