--- a/src/components/sections/Hero.css
+++ b/src/components/sections/Hero.css
@@ -16,7 +16,8 @@
   text-align: center;
   line-height: 1;
   font-family: 'Monument Extended', sans-serif;
-  font-size: 13rem;
+  font-size: 11rem;
+  letter-spacing: 10px;
   font-weight: 800;
 }
 
