--- a/src/index.css
+++ b/src/index.css
@@ -72,3 +72,21 @@ body {
   blur: 3px saturate(106%);
 }
 
+
+
+
+.underline-text::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  width: 0;
+  height: 2px;
+  background-color: rgb(251, 251, 251);
+  transition: width 0.3s ease, left 0.3s ease;
+}
+
+.underline-text:hover::after {
+  width: 100%;
+  left: 0;
+}
