--- a/src/components/sections/Experience/descriptions/style.module.scss
+++ b/src/components/sections/Experience/descriptions/style.module.scss
@@ -1,36 +1,75 @@
-.descriptions{
-    position: absolute;
-    top: 3px;
-    height: 100%;
-    width: 100%;
-    z-index: 2;
-    color: #111111;
-    pointer-events: none;
-    .description{
-        background-color: #f5f0ec;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding-left: 10%;
-        padding-right: -40%;
-        clip-path: inset(50% 0 50%);
-        transition: clip-path .4s;
-        p{
-            &:nth-of-type(1){
-                color: #010101;
-                text-transform: uppercase;
-                font-weight: 700;
-                font-size: 5vw;
-                line-height: 7.5vw;
-                margin: 0px;
-                position: relative;
-                z-index: 1;
-            }
-            &:nth-of-type(2){
-                width: 35%;
-                font-size: 1vw;
-                font-weight: 700;
-            }
-        }
+.descriptions {
+  position: absolute;
+  top: 3px;
+  height: 100%;
+  width: 100%;
+  z-index: 2;
+  color: #111111;
+  pointer-events: none;
+}
+
+.description {
+  background-color: #f5f0ec;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-left: 10%;
+  padding-right: -40%;
+  clip-path: inset(50% 0 50%);
+  transition: clip-path .4s;
+}
+
+.description p {
+  &:nth-of-type(1) {
+    color: #010101;
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 5vw;
+    line-height: 7.5vw;
+    margin: 0px;
+    position: relative;
+    z-index: 1;
+  }
+
+  &:nth-of-type(2) {
+    width: 35%;
+    font-size: 1vw;
+    font-weight: 700;
+  }
+}
+
+/* Media query for mobile devices */
+@media (max-width: 768px) {
+  .description {
+    flex-direction: column;
+    align-items: flex-start;
+    padding-left: 5%;
+    padding-right: 5%;
+    clip-path: inset(0 0 0 0); /* Adjust if needed */
+  }
+
+  .description p {
+    &:nth-of-type(1) {
+      font-size: 3vw;
+      line-height: 3vw;
     }
+
+    &:nth-of-type(2) {
+      width: 100%;
+      font-size: 2vw;
+    }
+  }
+}
+
+@media (max-width: 480px) {
+  .description p {
+    &:nth-of-type(1) {
+      font-size: 10vw;
+      line-height: 12vw;
+    }
+
+    &:nth-of-type(2) {
+      font-size: 4vw;
+    }
+  }
 }
