--- a/src/components/sections/Experience/titles/style.module.scss
+++ b/src/components/sections/Experience/titles/style.module.scss
@@ -1,34 +1,66 @@
-.titles{
+.titles {
     width: 100%;
     border-top: 1px solid rgba(183, 171, 152, 0.25);
-    .title{
-        border-bottom: 1px solid rgba(183, 171, 152, 0.25);
-        cursor: default;
-        position: relative;
-        z-index: 2;
-        .wrapper{
-            display: inline-block;
-            padding-left: 10%;
-
-            p{
-                display: inline-block;
-                color: #b7ab98;
-                text-transform: uppercase;
-                font-weight: 700;
-                font-size: 5vw;
-                line-height: 7.5vw;
-                margin: 0px;
-                position: relative;
-                z-index: 2;
-                &:nth-of-type(2){
-                    display: block;
-                    position: absolute;
-                    color: #1c1c1c;
-                    top: 0;
-                    z-index: 1;
-                }
-            }
-        }
+  }
+  
+  .title {
+    border-bottom: 1px solid rgba(183, 171, 152, 0.25);
+    cursor: default;
+    position: relative;
+    z-index: 2;
+  }
+  
+  .wrapper {
+    display: inline-block;
+    padding-left: 10%;
+  }
+  
+  .wrapper p {
+    display: inline-block;
+    color: #b7ab98;
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 5vw;
+    line-height: 7.5vw;
+    margin: 0px;
+    position: relative;
+    z-index: 2;
+  }
+  
+  .wrapper p:nth-of-type(2) {
+    display: block;
+    position: absolute;
+    color: #1c1c1c;
+    top: 0;
+    z-index: 1;
+  }
+  
+  /* Media query for mobile devices */
+  @media (max-width: 768px) {
+    .wrapper {
+      padding-left: 5%;
     }
-    
-}
+  
+    .wrapper p {
+      font-size: 8vw;
+      line-height: 10vw;
+    }
+  
+    .wrapper p:nth-of-type(2) {
+      font-size: 8vw;
+      line-height: 10vw;
+    }
+  }
+  
+  @media (max-width: 480px) {
+    .wrapper p {
+      font-size: 10vw;
+      line-height: 12vw;
+    }
+  
+    .wrapper p:nth-of-type(2) {
+      font-size: 10vw;
+      line-height: 12vw;
+    }
+  }
+  
