--- a/src/components/sections/Experience/titles/style.module.scss
+++ b/src/components/sections/Experience/titles/style.module.scss
@@ -1,23 +1,23 @@
 .titles {
     width: 100%;
-    border-top: 1px solid #1c1c1c;
+    border-top: 1px solid rgba(183, 171, 152, 0.25);
   }
-
+  
   .title {
-    border-bottom: 1px solid #1c1c1c;
+    border-bottom: 1px solid rgba(183, 171, 152, 0.25);
     cursor: default;
     position: relative;
     z-index: 2;
   }
-
+  
   .wrapper {
     display: inline-block;
     padding-left: 10%;
   }
-
+  
   .wrapper p {
     display: inline-block;
-    color: #f5f0ec;
+    color: #b7ab98;
     text-transform: uppercase;
     font-weight: 700;
     font-size: 5vw;
@@ -26,7 +26,7 @@
     position: relative;
     z-index: 2;
   }
-
+  
   .wrapper p:nth-of-type(2) {
     display: block;
     position: absolute;
@@ -34,20 +34,22 @@
     top: 0;
     z-index: 1;
   }
-
+  
   /* Media query for mobile devices */
   @media (max-width: 768px) {
     .wrapper {
       padding-left: 5%;
     }
-
+  
     .wrapper p {
       font-size: 8vw;
       line-height: 10vw;
     }
-
+  
     .wrapper p:nth-of-type(2) {
       font-size: 8vw;
       line-height: 10vw;
     }
   }
+
+  
